# 603-robotics

project1/catkin_ws/devel/: .catkin  local_setup.sh
project1/task1/catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
project1/task1/catkin_ws/devel/lib/pkgconfig/: my_turtle_pkg.pc
project1/task1/catkin_ws/devel/share/my_turtle_pkg/cmake/: my_turtle_pkgConfig.cmake
project1/task1/catkin_ws/src/my_turtle_pkg/: CMakeLists.txt
project1/task1/catkin_ws/src/my_turtle_pkg/scripts/: turtlesim_go_to_goal.py
project1/task2/: README.md
project1/task2/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
project1/task2/catkin_ws/devel/lib/pkgconfig/: P1D2_ameya_ranade.pc
project1/task2/catkin_ws/devel/share/P1D2_ameya_ranade/cmake/: P1D2_ameya_ranadeConfig.cmake
project1/task2/catkin_ws/src/P1D2_ameya_ranade/: CMakeLists.txt  package.xml
project1/task2/catkin_ws/src/P1D2_ameya_ranade/scripts/: P1D2_ameya_ranade.py
project2/: .gitignore
project2/catkin_ws/devel/: .catkin  setup.sh
project2/catkin_ws/devel/lib/pkgconfig/: stingray_sim.pc  wall_following.pc
project2/catkin_ws/devel/share/wall_following/cmake/: wall_followingConfig.cmake
project2/catkin_ws/src/wall_following/: CMakeLists.txt  package.xml
project2/catkin_ws/src/wall_following/launch/: manual_policy.launch
project2/catkin_ws/src/wall_following/scripts/: wall_following_manual.py
