<package format="2">
  <name>P1D2_ameya_ranade</name>
  <version>0.0.0</version>
  <description>The P1D2_ameya_ranade package</description>

  <maintainer email="aranade@umass.edu">Ameya Ranade</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
